[package]
name = "app"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "service"
path = "src/service.rs"

[[bin]]
name = "admin"
path = "src/admin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
transport = { workspace = true }
