[package]
name = "runtime"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtm-greeter = { workspace = true }
rtm-system = { workspace = true }
foundation = { workspace = true }
